@@ -1,5 +1,5 @@
 Package: linux-headers-@abiname@@localversion@
-Depends: linux-headers-@abiname@-common@localversion_headers@ (= ${binary:Version}), linux-kbuild-@version@, ${misc:Depends}
+Depends: linux-headers-@abiname@-common@localversion_headers@ (= ${binary:Version}), ${misc:Depends}
 Provides: linux-headers
 Description: Header files for Linux @abiname@@localversion@
  This package provides the architecture-specific kernel header files
