@@ -364,6 +364,7 @@ linux (3.2.101-1) UNRELEASED; urgency=medium
   * Bump ABI to 6
   * Add support for compilers installed outside the default PATH
   * [x86] Build using gcc-4.9 backport with retpoline support
+  * linux-headers: Make the dependency on linux-kbuild overridable
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 07 Jan 2017 17:41:34 +0000
 
